--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -9,7 +9,6 @@
     width: 40px;
     height: 40px;
     margin-right: 5px;
-    margin-left: 5px;
 }
 
 .site-name {
